Bug 460632 - Cannot initiate emoji picker with : in chat input box
Summary: Cannot initiate emoji picker with : in chat input box
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-10-18 00:38 UTC by Justin Zobel
Modified: 2022-11-26 14:14 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Justin Zobel 2022-10-18 00:38:00 UTC
STEPS TO REPRODUCE
1. Attempt to use : to insert an emoji while in the chat input box
2. Cry
3. Realise you can't use the cry emoji to represent your feelings

OBSERVED RESULT
No emoji popup

EXPECTED RESULT
Emoji popup

Everything from git master.
Comment 1 Tobias Fella 2022-10-18 12:53:03 UTC
Ah, that got lost in my refactoring
Comment 2 Marc Deop 2022-11-15 10:53:16 UTC
I am really missing this functionality. It would be nice to have it back! :-)
Comment 3 Bug Janitor Service 2022-11-26 01:43:03 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/665
Comment 4 Tobias Fella 2022-11-26 14:14:49 UTC
Git commit dd0300d0254957e9eb58f54d2fd06938a84e168a by Tobias Fella.
Committed on 26/11/2022 at 13:56.
Pushed by tfella into branch 'master'.

Reimplement normal emoji completion

M  +1    -1    CMakeLists.txt
M  +1    -1    src/CMakeLists.txt
M  +1    -1    src/chatdocumenthandler.cpp
M  +9    -2    src/completionmodel.cpp
M  +3    -0    src/completionmodel.h
M  +2    -0    src/customemojimodel.cpp
M  +4    -2    src/customemojimodel.h
M  +8    -3    src/emojimodel.cpp
M  +10   -2    src/emojimodel.h
M  +1    -1    src/main.cpp

https://invent.kde.org/network/neochat/commit/dd0300d0254957e9eb58f54d2fd06938a84e168a