Reimplement normal emoji completion

BUG: 460632